// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureToggleList renders correctly with one feature 1`] = `
<div>
  <div>
    <div
      class="makeStyles-searchBarContainer-3"
    >
      <form
        class="makeStyles-container-6"
        role="search"
      >
        <div
          class="makeStyles-search-7 makeStyles-searchBar-4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-searchIcon-8"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
          <div
            class="MuiInputBase-root makeStyles-inputRoot-9"
          >
            <input
              aria-label="search"
              class="MuiInputBase-input MuiInputBase-inputTypeSearch"
              placeholder="Search..."
              type="search"
              value=""
            />
          </div>
        </div>
      </form>
      <a
        href="/archive"
      >
        Archive
      </a>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      style="border-radius: 10px; box-shadow: none;"
    >
      <div
        class="makeStyles-headerContainer-10"
      >
        <div
          class="makeStyles-headerTitleContainer-14"
        >
          <div
            class=""
            data-loading="true"
          >
            <h1
              class="MuiTypography-root makeStyles-headerTitle-15 MuiTypography-h1"
            >
              Features 
            </h1>
          </div>
          <div
            class="makeStyles-headerActions-16"
          >
            <div
              class="makeStyles-actionsContainer-1"
            >
              <div
                class="makeStyles-actions-17"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                  data-loading="true"
                >
                  Sorted by:
                </p>
                <button
                  aria-controls="sorting"
                  aria-haspopup="true"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text"
                  data-loading="true"
                  id="sorting"
                  style="text-transform: lowercase; font-weight: normal;"
                  tabindex="0"
                  title="Sort by"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    By Name
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        <svg
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="img"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                          <title>
                            Toggle
                          </title>
                        </svg>
                      </span>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-bodyContainer-11"
      >
        <ul
          class="MuiList-root MuiList-padding"
        >
          <li
            class="MuiListItem-root makeStyles-listItem-18 MuiListItem-gutters"
          >
            <span
              class="makeStyles-listItemMetric-19"
            >
              <div
                class="makeStyles-container-25"
                style="background: rgb(237, 240, 241); font-size: 0.8rem;"
                title="No usage reported from connected applications"
              >
                <span
                  style="font-size: 1.4rem;"
                >
                  ⊕
                </span>
              </div>
            </span>
            <span
              class="makeStyles-listItemType-20 hideLt600"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-26"
                data-loading="true"
                focusable="false"
                title="This is a \\"\\" toggle"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
                />
              </svg>
            </span>
            <span
              class="makeStyles-listItemLink-22"
            >
              <a
                class="listLink truncate"
                href="/projects/default/features/Another"
              >
                <span
                  class="toggleName"
                  title="another's description"
                >
                  Another
                   
                </span>
                <span />
                <small>
                  <time
                    datetime="2018-02-04T20:27:52.127Z"
                    title="2018-02-04T20:27:52.127Z"
                  >
                    4 years ago
                  </time>
                </small>
                <div>
                  <span
                    class="truncate"
                  >
                    <small>
                      another's description
                    </small>
                  </span>
                </div>
              </a>
            </span>
            <span
              class="makeStyles-listItemStrategies-23 hideLt920"
            >
              <a
                class="makeStyles-disabledLink-24"
                href="/projects/default"
                style="text-decoration: none;"
              >
                <div
                  class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary"
                  style="margin-left: 8px; cursor: pointer;"
                  title="Project: default"
                >
                  <span
                    class="MuiChip-label"
                  >
                    default
                  </span>
                </div>
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="makeStyles-container-28"
    data-testid="ANNOUNCER_ELEMENT_TEST_ID"
    role="status"
  >
    Navigated to Features 
  </div>
</div>
`;

exports[`FeatureToggleList renders correctly with one feature without permissions 1`] = `
<div>
  <div>
    <div
      class="makeStyles-searchBarContainer-31"
    >
      <form
<<<<<<< HEAD
        class="makeStyles-container-34"
=======
        class="makeStyles-container-33"
>>>>>>> fix: update refectored components after rebase
        role="search"
      >
        <div
          class="makeStyles-search-35 makeStyles-searchBar-32"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-searchIcon-36"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
          <div
            class="MuiInputBase-root makeStyles-inputRoot-37"
          >
            <input
              aria-label="search"
              class="MuiInputBase-input MuiInputBase-inputTypeSearch"
              placeholder="Search..."
              type="search"
              value=""
            />
          </div>
        </div>
      </form>
      <a
        href="/archive"
      >
        Archive
      </a>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      style="border-radius: 10px; box-shadow: none;"
    >
      <div
        class="makeStyles-headerContainer-38"
      >
        <div
          class="makeStyles-headerTitleContainer-42"
        >
          <div
            class=""
            data-loading="true"
          >
            <h1
<<<<<<< HEAD
              class="MuiTypography-root makeStyles-headerTitle-43 MuiTypography-h1"
=======
              class="MuiTypography-root makeStyles-headerTitle-42 MuiTypography-h1"
>>>>>>> fix: update refectored components after rebase
            >
              Features 
            </h1>
          </div>
          <div
            class="makeStyles-headerActions-44"
          >
            <div
              class="makeStyles-actionsContainer-29"
            >
              <div
                class="makeStyles-actions-45"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                  data-loading="true"
                >
                  Sorted by:
                </p>
                <button
                  aria-controls="sorting"
                  aria-haspopup="true"
                  class="MuiButtonBase-root MuiButton-root MuiButton-text"
                  data-loading="true"
                  id="sorting"
                  style="text-transform: lowercase; font-weight: normal;"
                  tabindex="0"
                  title="Sort by"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    By Name
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        <svg
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="img"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                          <title>
                            Toggle
                          </title>
                        </svg>
                      </span>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-bodyContainer-39"
      >
        <ul
          class="MuiList-root MuiList-padding"
        >
          <li
            class="MuiListItem-root makeStyles-listItem-46 MuiListItem-gutters"
          >
            <span
              class="makeStyles-listItemMetric-47"
            >
              <div
                class="makeStyles-container-53"
                style="background: rgb(237, 240, 241); font-size: 0.8rem;"
                title="No usage reported from connected applications"
              >
                <span
                  style="font-size: 1.4rem;"
                >
                  ⊕
                </span>
              </div>
            </span>
            <span
              class="makeStyles-listItemType-48 hideLt600"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-54"
                data-loading="true"
                focusable="false"
                title="This is a \\"\\" toggle"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
                />
              </svg>
            </span>
            <span
              class="makeStyles-listItemLink-50"
            >
              <a
                class="listLink truncate"
                href="/projects/default/features/Another"
              >
                <span
                  class="toggleName"
                  title="another's description"
                >
                  Another
                   
                </span>
                <span />
                <small>
                  <time
                    datetime="2018-02-04T20:27:52.127Z"
                    title="2018-02-04T20:27:52.127Z"
                  >
                    4 years ago
                  </time>
                </small>
                <div>
                  <span
                    class="truncate"
                  >
                    <small>
                      another's description
                    </small>
                  </span>
                </div>
              </a>
            </span>
            <span
              class="makeStyles-listItemStrategies-51 hideLt920"
            >
              <a
                class="makeStyles-disabledLink-52"
                href="/projects/default"
                style="text-decoration: none;"
              >
                <div
                  class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary"
                  style="margin-left: 8px; cursor: pointer;"
                  title="Project: default"
                >
                  <span
                    class="MuiChip-label"
                  >
                    default
                  </span>
                </div>
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="makeStyles-container-56"
    data-testid="ANNOUNCER_ELEMENT_TEST_ID"
    role="status"
  >
    Navigated to Features 
  </div>
</div>
`;
